@@ -377,22 +377,30 @@ public final class OpenmrsConstants {
 
 	public static final String GLOBAL_PROPERTY_DRUG_ORDER_REQUIRE_OUTPATIENT_QUANTITY = "drugOrder.requireOutpatientQuantity";
 	
-	public static final String DEFAULT_ADDRESS_TEMPLATE = "<org.openmrs.layout.address.AddressTemplate>\n"
-	        + "    <nameMappings class=\"properties\">\n"
-	        + "      <property name=\"postalCode\" value=\"Location.postalCode\"/>\n"
-	        + "      <property name=\"address2\" value=\"Location.address2\"/>\n"
-	        + "      <property name=\"address1\" value=\"Location.address1\"/>\n"
-	        + "      <property name=\"country\" value=\"Location.country\"/>\n"
-	        + "      <property name=\"stateProvince\" value=\"Location.stateProvince\"/>\n"
-	        + "      <property name=\"cityVillage\" value=\"Location.cityVillage\"/>\n" + "    </nameMappings>\n"
-	        + "    <sizeMappings class=\"properties\">\n" + "      <property name=\"postalCode\" value=\"10\"/>\n"
-	        + "      <property name=\"address2\" value=\"40\"/>\n" + "      <property name=\"address1\" value=\"40\"/>\n"
-	        + "      <property name=\"country\" value=\"10\"/>\n"
-	        + "      <property name=\"stateProvince\" value=\"10\"/>\n"
-	        + "      <property name=\"cityVillage\" value=\"10\"/>\n" + "    </sizeMappings>\n" + "    <lineByLineFormat>\n"
-	        + "      <string>address1</string>\n" + "      <string>address2</string>\n"
-	        + "      <string>cityVillage stateProvince country postalCode</string>\n" + "    </lineByLineFormat>\n"
-	        + "   <requiredElements>\\n\" + \" </requiredElements>\\n\" + \" </org.openmrs.layout.address.AddressTemplate>";
+	public static final String DEFAULT_ADDRESS_TEMPLATE = """
+	        <org.openmrs.layout.address.AddressTemplate>
+	            <nameMappings class="properties">
+	              <property name="postalCode" value="Location.postalCode"/>
+	              <property name="address2" value="Location.address2"/>
+	              <property name="address1" value="Location.address1"/>
+	              <property name="country" value="Location.country"/>
+	              <property name="stateProvince" value="Location.stateProvince"/>
+	              <property name="cityVillage" value="Location.cityVillage"/>
+	            </nameMappings>
+	            <sizeMappings class="properties">
+	              <property name="postalCode" value="10"/>
+	              <property name="address2" value="40"/>
+	              <property name="address1" value="40"/>
+	              <property name="country" value="10"/>
+	              <property name="stateProvince" value="10"/>
+	              <property name="cityVillage" value="10"/>
+	            </sizeMappings>
+	            <lineByLineFormat>
+	              <string>address1</string>
+	              <string>address2</string>
+	              <string>cityVillage stateProvince country postalCode</string>
+	            </lineByLineFormat>
+	           <requiredElements>\\n" + " </requiredElements>\\n" + " </org.openmrs.layout.address.AddressTemplate>""";
 	
 	/**
 	 * Global property name that allows specification of whether user passwords must contain both
@@ -1145,11 +1153,11 @@ public final class OpenmrsConstants {
 		return states;
 	}
 	
-	public static final Locale SPANISH_LANGUAGE = new Locale("es");
+	public static final Locale SPANISH_LANGUAGE = Locale.of("es");
 	
-	public static final Locale PORTUGUESE_LANGUAGE = new Locale("pt");
+	public static final Locale PORTUGUESE_LANGUAGE = Locale.of("pt");
 	
-	public static final Locale ITALIAN_LANGUAGE = new Locale("it");
+	public static final Locale ITALIAN_LANGUAGE = Locale.of("it");
 	
 	/*
 	 * User property names
