@@ -65,7 +65,7 @@ public class ConceptValidatorChangeSet implements CustomTaskChange {
 	//A set to store unique concept names that have been updated and changes have to be persisted to the database
 	private Set<ConceptName> updatedConceptNames = new HashSet<>();
 	
-	private Locale defaultLocale = new Locale("en");
+	private Locale defaultLocale = Locale.of("en");
 	
 	private List<Locale> allowedLocales = null;
 	
@@ -558,7 +558,7 @@ public class ConceptValidatorChangeSet implements CustomTaskChange {
 		}
 		
 		//if it isn't among
-		allowedLocales.add(new Locale("en"));
+		allowedLocales.add(Locale.of("en"));
 		
 		return allowedLocales.asList();
 	}
